--- a/apkTools_6.0/.github/workflows/deploy.yml
+++ b/apkTools_6.0/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
+          path: './apkTools_6.0'
 
       - name: Deploy to GitHub Pages
         id: deployment
