--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './apkTools_6.0'
+          path: './apkTools_release'
       
       - name: Deploy to GitHub Pages
         id: deployment
