--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,22 +25,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Verify directory exists
-        run: |
-          if [ ! -d "apkTools_release" ]; then
-            echo "Error: apkTools_release directory not found"
-            exit 1
-          fi
-          ls -la apkTools_release/
-          echo "Directory verified successfully"
-      
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './apkTools_release'
+          path: 'apkTools_release'
       
       - name: Deploy to GitHub Pages
         id: deployment
