--- a/shawtools_flutter/pubspec.yaml
+++ b/shawtools_flutter/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_animate: ^4.5.0
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
+  smooth_page_indicator: ^1.1.0
   
   # Utils
   shared_preferences: ^2.2.2
