--- a/shawtools_flutter/pubspec.yaml
+++ b/shawtools_flutter/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.1.0
+  flutter_staggered_grid_view: ^0.7.0
   
   # Utils
   shared_preferences: ^2.2.2
@@ -62,6 +63,9 @@ dependencies:
   
   # Date & Time
   intl: ^0.19.0
+  
+  # UUID
+  uuid: ^4.2.2
   
   # Device Info
   device_info_plus: ^9.1.1
