feat: 优化纯 Vue 部署配置与代码混淆
- 使用 hash 路由模式适配 GitHub Pages
- 增强 terser 代码混淆配置
- 修复 Vue 模板中的 HTML 标签转义问题
- 简化 GitHub Actions 部署流程
- 删除旧的静态部署工作流

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,13 +33,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Build
+      - name: Build with obfuscation
         run: npm run build
       
-      - name: Copy static assets
-        run: |
-          cp -r public/tools dist/
-          cp -r public/assets dist/
+      - name: Create 404.html for SPA
+        run: cp dist/index.html dist/404.html
       
       - name: Setup Pages
         uses: actions/configure-pages@v5
