--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "build:analyze": "vite build --mode analyze"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
     "crypto-js": "^4.2.0",
+    "gsap": "^3.14.2",
     "jszip": "^3.10.1",
-    "node-forge": "^1.3.1"
+    "node-forge": "^1.3.1",
+    "three": "^0.182.0",
+    "vanta": "^0.5.24",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
