优化项目架构和用户体验
- 移除写作助手工具及相关文件
- 移除页面切换转场动画，提升页面切换流畅度
- 优化主题切换按钮，固定显示在右上角
- 统一使用公共组件（FileUploader、ImageUploader、ImagePreview）
- 优化汇率转换工具，添加完整的货币图标映射和搜索功能
- 修复 markdown 编辑器工具的主题切换按钮重复问题
- 统一工具类方法到 utils/common.js
- 优化代码结构，移除冗余文件和代码

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:analyze": "vite build --mode analyze"
   },
   "dependencies": {
+    "@neodrag/vue": "^2.3.1",
     "crypto-js": "^4.2.0",
     "gsap": "^3.14.2",
     "jszip": "^3.10.1",
