--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^4.2.0",
     "gsap": "^3.14.2",
     "jszip": "^3.10.1",
+    "lunar-javascript": "^1.7.7",
     "node-forge": "^1.3.1",
     "three": "^0.182.0",
     "vanta": "^0.5.24",
